WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141539
Additional emoji group support
https://bugs.webkit.org/show_bug.cgi?id=141539
Summary
Additional emoji group support
Enrica Casucci
Reported
2015-02-12 15:03:06 PST
Adding some new emoji groups.
rdar://problem/19727527
Attachments
Patch
(11.21 KB, patch)
2015-02-12 15:06 PST
,
Enrica Casucci
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-mavericks-wk2
(675.60 KB, application/zip)
2015-02-12 15:42 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews101 for mac-mavericks
(528.77 KB, application/zip)
2015-02-12 15:53 PST
,
Build Bot
no flags
Details
Patch2
(11.09 KB, patch)
2015-02-12 16:06 PST
,
Enrica Casucci
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2015-02-12 15:06:55 PST
Created
attachment 246479
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-12 15:08:38 PST
Attachment 246479
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/text/TextBreakIterator.cpp:211: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/text/TextBreakIterator.cpp:233: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/text/TextBreakIterator.cpp:252: One space before end of line comments [whitespace/comments] [5] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3
2015-02-12 15:42:09 PST
Comment on
attachment 246479
[details]
Patch
Attachment 246479
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5085886555357184
New failing tests: editing/deleting/regional-indicators.html editing/selection/regional-indicators.html
Build Bot
Comment 4
2015-02-12 15:42:14 PST
Created
attachment 246482
[details]
Archive of layout-test-results from ews105 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Enrica Casucci
Comment 5
2015-02-12 15:46:59 PST
Looking into the test failures.
Build Bot
Comment 6
2015-02-12 15:53:38 PST
Comment on
attachment 246479
[details]
Patch
Attachment 246479
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5381294405976064
New failing tests: editing/deleting/regional-indicators.html editing/selection/regional-indicators.html
Build Bot
Comment 7
2015-02-12 15:53:42 PST
Created
attachment 246484
[details]
Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Enrica Casucci
Comment 8
2015-02-12 16:06:11 PST
Created
attachment 246485
[details]
Patch2 Found a bug in the ICU rules. This fixes the failing tests.
WebKit Commit Bot
Comment 9
2015-02-12 16:08:14 PST
Attachment 246485
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/text/TextBreakIterator.cpp:211: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/text/TextBreakIterator.cpp:233: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/text/TextBreakIterator.cpp:252: One space before end of line comments [whitespace/comments] [5] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 10
2015-02-13 15:44:26 PST
Committed revision 180087.
Leslie Faulkner
Comment 11
2024-10-31 18:16:18 PDT
I am taking a look in the bug. The exploratory patch is not working because when updateAnimations is called, sometimes it calls
http://webkit-queues.appspot.com/results/5085886555357184
https://solarsmash.co
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug