Additional emoji group support. https://bugs.webkit.org/show_bug.cgi?id=141539 rdar://problem/19727527

Reviewed by Sam Weinig.

Source/WebCore:

Adding some new emoji ligatures.
Updated existing test to include the new sequences.

* platform/text/TextBreakIterator.cpp:
(WebCore::cursorMovementIterator):
* rendering/RenderText.cpp:
(WebCore::isEmojiGroupCandidate):

LayoutTests:

Updating test to reflect the new emoji ligatures supported.

* editing/deleting/delete-emoji-expected.txt:
* editing/deleting/delete-emoji.html:



Canonical link: https://commits.webkit.org/159612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180087 268f45cc-cd09-0410-ab3c-d52691b4dbfc